# lms

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .venv  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOAL.md  LICENSE  README.md  SECURITY.md  compose.bundled-tdb.yaml  compose.dev.yaml  compose.example.yaml  compose.external-tdb.yaml  compose.traefik.yaml  compose.yaml  opencode.json  pyproject.toml  shell.nix
extensions/firnline-ext-address-book/: pyproject.toml
extensions/firnline-ext-address-book/src/firnline_ext_address_book/: __init__.py  _tui_screen.py  enrich.py  extract.py  geocode.py  indexer.py  manifest.json  models.py  schema.json  tools.py  tui.py
extensions/firnline-ext-address-book/tests/: test_discovery.py  test_enrich.py  test_extractor.py  test_geocode.py  test_indexer.py  test_tools.py  test_tui_plugin.py
extensions/firnline-ext-decisions/: pyproject.toml
extensions/firnline-ext-decisions/src/firnline_ext_decisions/: __init__.py  extract.py  indexer.py  manifest.json  models.py  schema.json
extensions/firnline-ext-decisions/tests/: test_extractor.py  test_indexer.py
extensions/firnline-ext-deliberation/: pyproject.toml
extensions/firnline-ext-deliberation/src/firnline_ext_deliberation/: __init__.py  _tui_screen.py  extract.py  indexer.py  manifest.json  models.py  schema.json  tui.py
extensions/firnline-ext-deliberation/tests/: test_extractor.py  test_indexer.py  test_tui_plugin.py
extensions/firnline-ext-inbox/: pyproject.toml
extensions/firnline-ext-inbox/src/firnline_ext_inbox/: __init__.py  capture.py  manifest.json  sources.py
extensions/firnline-ext-inbox/tests/: test_capture.py  test_sources.py
extensions/firnline-ext-people/: pyproject.toml
extensions/firnline-ext-people/src/firnline_ext_people/: __init__.py  extract.py  indexer.py  (+3 more)
extensions/firnline-ext-people/tests/: test_extractor.py  test_people_discovery.py  test_people_extractor.py
extensions/firnline-ext-places/: pyproject.toml
extensions/firnline-ext-places/tests/: test_places_discovery.py
extensions/firnline-ext-planning/: pyproject.toml
extensions/firnline-ext-planning/tests/: test_discovery.py  test_extractor.py  test_planning_discovery.py  test_planning_extractor.py  test_planning_tools.py  test_tools.py
extensions/firnline-ext-reminders/: pyproject.toml
extensions/firnline-ext-reminders/tests/: test_discovery.py  test_extractor.py  test_reminder_extractor.py  test_reminder_tool_specs.py  test_reminder_tools.py  test_reminders_discovery.py  test_tools.py
extensions/firnline-ext-routines/: pyproject.toml
extensions/firnline-ext-routines/tests/: test_models.py  test_routines_discovery.py
extensions/firnline-ext-time-management/: pyproject.toml
extensions/firnline-ext-time-management/tests/: test_discovery.py  test_extractor.py  test_indexer.py  test_routine_spawn_extractor.py  test_tool_specs.py  test_tools.py
extensions/firnline-ext-webhook/: README.md  pyproject.toml
extensions/firnline-ext-webhook/tests/: conftest.py  test_executor.py
extensions/lms-ext-inbox/: pyproject.toml
extensions/lms-ext-inbox/tests/: test_capture.py  test_sources.py
extensions/lms-ext-people/: pyproject.toml
extensions/lms-ext-people/tests/: test_discovery.py  test_extractor.py
extensions/lms-ext-places/: pyproject.toml
extensions/lms-ext-places/tests/: test_discovery.py
extensions/lms-ext-planning/: pyproject.toml
extensions/lms-ext-planning/tests/: test_discovery.py  test_extractor.py  test_tools.py
extensions/lms-ext-reminders/: pyproject.toml
extensions/lms-ext-reminders/tests/: test_discovery.py  test_extractor.py  test_tools.py
extensions/lms-ext-routines/: pyproject.toml
extensions/lms-ext-routines/tests/: test_discovery.py
services/apid/: Dockerfile  pyproject.toml
services/apid/tests/: test_app.py
services/captured/: Dockerfile  README.md  pyproject.toml
services/captured/tests/: test_app.py  test_handlers.py
services/effectd/: .gitignore  Dockerfile  README.md  pyproject.toml
services/effectd/tests/: test_engine.py  test_legacy_notify.py  test_main_lock.py  test_settings.py  test_smoke.py
services/indexed/: Dockerfile  README.md  pyproject.toml
services/indexed/tests/: test_poller.py  test_store.py
services/ingestd/: Dockerfile  README.md  compose.dev.yaml  pyproject.toml
services/ingestd/schema/: bootstrap.py  schema.json  seed.py
services/ingestd/tests/: test_extraction.py  test_linking.py  test_liveness.py  test_pipeline.py  test_plugin_host.py  test_sources.py
services/mcpd/: Dockerfile  README.md  pyproject.toml
services/mcpd/tests/: test_dynamic_tools.py  test_settings.py  test_tools.py
services/notifyd/: Dockerfile  pyproject.toml
services/notifyd/tests/: test_engine.py  test_settings.py  test_smoke.py
services/queryd/: Dockerfile  README.md  compose.dev.yaml  pyproject.toml
services/queryd/tests/: test_agent.py  test_app.py  test_chat.py  test_documents_post.py  test_documents_put.py  test_endpoints.py  test_operations.py  test_plugins.py  test_schema_briefing.py  test_settings.py  test_tools.py  test_tools_api.py
services/triggerd/: Dockerfile  README.md  pyproject.toml
services/triggerd/tests/: test_engine.py  test_evaluators.py  test_liveness.py  test_plugin_host.py  test_settings.py  test_smoke.py
services/tui/: pyproject.toml
services/tui/tests/: test_state.py
services/webui/: .gitignore  Dockerfile  README.md  pyproject.toml  rxconfig.py
services/webui/assets/: fonts.css
services/webui/reflex.lock/: package.json
services/webui/scripts/: generate_favicon.py
services/webui/tests/: test_auth.py  test_automations_state.py  test_browse_state.py  test_calendar_introspect.py  test_chat_state.py  test_clients.py  test_clients_chat.py  test_feedback.py  test_graph_index.py  test_graph_state.py  test_health_state.py  test_introspect.py  test_introspect_graph.py  test_registry.py  test_relationships_state.py  test_settings.py  test_shell.py  test_states_cleanup.py  test_time_management_plugin.py  test_ui_controls.py
(+356 files in other folders)
