[project]
name = "queryd"
version = "0.1.0"
description = "FastAPI conversational agent over TerminusDB"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "lms-core",
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "pydantic-settings",
    "pydantic-ai-slim[openai]",
    "httpx",
    "structlog",
]

[tool.uv.sources]
lms-core = { path = "../lms-core", editable = true }

[project.scripts]
queryd = "queryd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/queryd"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
