[project]
name = "firnline-workspace"
version = "0.1.0"
requires-python = ">=3.12"
license = "Apache-2.0"

[tool.uv.workspace]
members = ["packages/*", "services/*", "extensions/*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib -m 'not integration'"
norecursedirs = ["scripts/melt_test"]
markers = [
    "integration: integration tests that require a running dev instance",
]
