[project]
name = "firnline-ext-decisions"
version = "0.1.0"
description = "ADR-style decision records for firnline"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
]

[project.entry-points."firnline.schema_modules"]
decisions = "firnline_ext_decisions"

[project.entry-points."firnline.ingestd.extractors"]
decisions_extractor = "firnline_ext_decisions.extract:plugin"

[project.entry-points."firnline.indexed.indexers"]
decisions_indexer = "firnline_ext_decisions.indexer:plugin"

[tool.uv.sources]
firnline-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firnline_ext_decisions"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
