[project]
name = "firnline-ext-deliberation"
version = "0.1.0"
description = "Firnline deliberation extension — problems, decisions, and questions"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
]

[project.entry-points."firnline.schema_modules"]
deliberation = "firnline_ext_deliberation"

[project.entry-points."firnline.ingestd.extractors"]
deliberation_extractor = "firnline_ext_deliberation.extract:plugin"

[project.entry-points."firnline.indexed.indexers"]
deliberation_indexer = "firnline_ext_deliberation.indexer:plugin"

[project.entry-points."firnline.tui.screens"]
deliberation_tui = "firnline_ext_deliberation.tui:plugin"

[tool.uv.sources]
firnline-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firnline_ext_deliberation"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"