[project]
name = "firnline-ext-inbox"
version = "0.1.0a1"
description = "Firnline inbox extension — InboxNote/InboxAudio schema, ingest sources, and capture handlers"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
    "structlog",
]

[tool.uv.sources]
firnline-core = { workspace = true }

[project.entry-points."firnline.schema_modules"]
inbox = "firnline_ext_inbox"

[project.entry-points."firnline.ingestd.sources"]
inbox_note = "firnline_ext_inbox.sources:inbox_note_plugin"
inbox_audio = "firnline_ext_inbox.sources:inbox_audio_plugin"

[project.entry-points."firnline.captured.handlers"]
inbox_note = "firnline_ext_inbox.capture:inbox_note_handler"
inbox_audio = "firnline_ext_inbox.capture:inbox_audio_handler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firnline_ext_inbox"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
