[project]
name = "firnline-ext-people"
version = "0.1.0"
description = "Firnline people extension — Person/Contact schema module and entity linking extractors"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
]

[project.entry-points."firnline.schema_modules"]
people = "firnline_ext_people"

[project.entry-points."firnline.ingestd.extractors"]
people_linking = "firnline_ext_people.extract:plugin"

[project.entry-points."firnline.indexed.indexers"]
people_indexer = "firnline_ext_people.indexer:plugin"

[tool.uv.sources]
firnline-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firnline_ext_people"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
