[project]
name = "firnline-ext-routines"
version = "0.1.0"
description = "Firnline routines extension — Routine/RoutineStep/Activity/ActivitySpec schema module"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
    "firnline-ext-planning",
]

[project.entry-points."firnline.schema_modules"]
routines = "firnline_ext_routines"

[project.entry-points."firnline.indexed.indexers"]
routines_indexer = "firnline_ext_routines.indexer:plugin"

[tool.uv.sources]
firnline-core = { workspace = true }
firnline-ext-planning = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firnline_ext_routines"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
