[project]
name = "firnline-ext-time-management"
version = "0.1.0"
description = "Firnline time-management extension — unified Task, Event, Routine, Activity schema module"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
    "firnline-ext-address-book",
    "structlog",
]

[project.entry-points."firnline.schema_modules"]
time_management = "firnline_ext_time_management"

[project.entry-points."firnline.ingestd.extractors"]
time_management_extractor = "firnline_ext_time_management.extract:plugin"

[project.entry-points."firnline.queryd.tools"]
time_management_tools = "firnline_ext_time_management.tools:plugin"

[project.entry-points."firnline.indexed.indexers"]
time_management_indexer = "firnline_ext_time_management.indexer:plugin"

[project.entry-points."firnline.webui.pages"]
time_management_webui = "firnline_ext_time_management.webui:plugin"

[tool.uv.sources]
firnline-core = { workspace = true }
firnline-ext-address-book = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firnline_ext_time_management"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
