[project]
name = "firnline-ext-webhook"
version = "0.1.0"
description = "Firnline Webhook action executor extension"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
    "httpx",
    "pydantic-settings",
]

[project.entry-points."firnline.effectd.executors"]
webhook = "firnline_ext_webhook.executor:plugin"

[tool.uv.sources]
firnline-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firnline_ext_webhook"]

[dependency-groups]
dev = [
    "pytest",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
