[project]
name = "lms-ext-inbox"
version = "0.1.0a1"
description = "LMS inbox extension — InboxNote/InboxAudio schema, ingest sources, and capture handlers"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "lms-core",
    "structlog",
]

[tool.uv.sources]
lms-core = { workspace = true }

[project.entry-points."lms.schema_modules"]
inbox = "lms_ext_inbox"

[project.entry-points."lms.ingestd.sources"]
inbox_note = "lms_ext_inbox.sources:inbox_note_plugin"
inbox_audio = "lms_ext_inbox.sources:inbox_audio_plugin"

[project.entry-points."lms.captured.handlers"]
inbox_note = "lms_ext_inbox.capture:inbox_note_handler"
inbox_audio = "lms_ext_inbox.capture:inbox_audio_handler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lms_ext_inbox"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
