[project]
name = "lms-ext-places"
version = "0.1.0a1"
description = "LMS places extension — Location schema module"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "lms-core",
]

[project.entry-points."lms.schema_modules"]
places = "lms_ext_places"

[tool.uv.sources]
lms-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lms_ext_places"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
