[project]
name = "lms-ext-planning"
version = "0.1.0a1"
description = "LMS planning extension — Task/Event schema module and queryd write tools"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "lms-core",
    "pydantic-ai-slim",
    "structlog",
]

[project.entry-points."lms.schema_modules"]
planning = "lms_ext_planning"

[project.entry-points."lms.queryd.tools"]
planning_tools = "lms_ext_planning.tools:plugin"

[project.entry-points."lms.ingestd.extractors"]
planning_people = "lms_ext_planning.extract:plugin"

[tool.uv.sources]
lms-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lms_ext_planning"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
