[project]
name = "lms-ext-reminders"
version = "0.1.0a1"
description = "LMS reminders extension — Reminder/Trigger schema modules and queryd write tools"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "lms-core",
    "pydantic-ai-slim",
    "structlog",
]

[project.entry-points."lms.schema_modules"]
reminders = "lms_ext_reminders.reminders_module"
triggers = "lms_ext_reminders.triggers_module"

[project.entry-points."lms.queryd.tools"]
reminder_tools = "lms_ext_reminders.tools:plugin"

[project.entry-points."lms.ingestd.extractors"]
reminder_extract = "lms_ext_reminders.extract:plugin"

[tool.uv.sources]
lms-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lms_ext_reminders"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
