[project]
name = "lms-ext-routines"
version = "0.1.0a1"
description = "LMS routines extension — Routine/RoutineStep/Activity/ActivitySpec schema module"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "lms-core",
]

[project.entry-points."lms.schema_modules"]
routines = "lms_ext_routines"

[tool.uv.sources]
lms-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lms_ext_routines"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
