[project]
name = "apid"
version = "0.1.0"
description = "Combined single-port API service — bundles captured, queryd, indexed, and mcpd"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "captured",
    "queryd",
    "indexed",
    "mcpd",
    "firnline-core",
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "pydantic-settings",
    "structlog",
]

[tool.uv.sources]
captured = { workspace = true }
queryd = { workspace = true }
indexed = { workspace = true }
mcpd = { workspace = true }
firnline-core = { workspace = true }

[project.scripts]
apid = "apid.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apid"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
