[project]
name = "captured"
version = "0.1.0"
description = "FastAPI capture-ingress daemon"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic>=2",
    "pydantic-settings",
    "structlog",
]

[tool.uv.sources]
firnline-core = { workspace = true }

[project.scripts]
captured = "captured.main:main"

[project.entry-points."firnline.captured.handlers"]
inbox_note = "captured.handlers:captured_note_handler"
inbox_file = "captured.handlers:captured_file_handler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/captured"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
