[project]
name = "indexed"
version = "0.1.0a1"
description = "Firnline precision grounding service — mirrors TerminusDB documents and schema into a hybrid vector+lexical index for drift-resistant LLM queries"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "pydantic-settings",
    "httpx",
    "structlog",
]

[tool.uv.sources]
firnline-core = { workspace = true }

[project.scripts]
indexed = "indexed.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/indexed"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
