[project]
name = "ingestd"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "lms-core",
    "pydantic>=2",
    "pydantic-settings",
    "pydantic-ai-slim[openai]",
    "httpx",
    "structlog",
]

[tool.uv.sources]
lms-core = { workspace = true }
lms-ext-inbox = { workspace = true }

[project.entry-points."lms.ingestd.extractors"]
planning_people = "ingestd.plugins.planning_people:plugin"

[project.scripts]
ingestd = "ingestd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestd"]

[dependency-groups]
dev = [
    "lms-ext-inbox",
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
