[project]
name = "ingestd"
version = "0.1.0"
description = "AI ingestion polling worker: extracts structured entities from captured inbox items via LLM extractors"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
    "pydantic>=2",
    "pydantic-settings",
    "pydantic-ai-slim[openai]",
    "httpx",
    "structlog",
]

[tool.uv.sources]
firnline-core = { workspace = true }
firnline-ext-planning = { workspace = true }
firnline-ext-reminders = { workspace = true }
firnline-ext-people = { workspace = true }

[project.entry-points."firnline.ingestd.sources"]
inbox_note = "ingestd.sources:captured_text_plugin"
inbox_audio = "ingestd.sources:captured_audio_plugin"

[project.scripts]
ingestd = "ingestd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestd"]

[dependency-groups]
dev = [
    "firnline-ext-planning",
    "firnline-ext-reminders",
    "firnline-ext-people",
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
