[project]
name = "notifyd"
version = "0.1.0"
description = "Firnline notification delivery daemon — polls TriggerFiring documents and delivers notifications via channel plugins"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
    "pydantic>=2",
    "pydantic-settings",
    "structlog",
    "python-dateutil",
]

[tool.uv.sources]
firnline-core = { workspace = true }

[project.scripts]
notifyd = "notifyd.main:main"

[project.entry-points."firnline.notifyd.channels"]
# Third-party / extension channels register here.
# Example: email = "firnline_notify_email:email_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notifyd"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
