[project]
name = "queryd"
version = "0.1.0"
description = "GraphQL read proxy + guarded write-tool endpoints over TerminusDB"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "pydantic-settings",
    "pydantic-ai-slim",
    "httpx",
    "structlog",
]

[project.scripts]
queryd = "queryd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/queryd"]

[tool.uv.sources]
firnline-core = { workspace = true }
firnline-ext-time-management = { workspace = true }
firnline-ext-address-book = { workspace = true }

[dependency-groups]
dev = [
    "firnline-ext-time-management",
    "firnline-ext-address-book",
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
