[project]
name = "firnline-tui"
version = "0.1.0"
description = "Textual-based terminal UI for Firnline"
authors = [
    { name = "BaLion29", email = "bastien.aeby@familyaeby.ch" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "firnline-core",
    "textual>=0.80",
    "httpx",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.scripts]
firnline-tui = "firnline_tui.main:main"

[tool.uv.sources]
firnline-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firnline_tui"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
